// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Experience should render for empty data: NoData 1`] = `
<DocumentFragment>
  .c3 {
  width: 16px;
  height: 16px;
}

.c3 path {
  stroke: var(--acx-neutrals-50);
}

.c3 circle {
  fill: var(--acx-neutrals-50);
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c6 .ant-progress-steps-outer .ant-progress-steps-item {
  width: 6px !important;
  border-radius: 2px;
}

.c6 .ant-progress-inner,
.c6 .ant-progress-bg {
  border-radius: 0px 3px 3px 0px !important;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="c2"
                  >
                    Client Experience
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="c3"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: flex; height: 800px; width: 1280px; flex-direction: column; justify-content: space-around;"
            >
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    Connection Success
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c6"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    Time To Connect
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c6"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    Client Throughput
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c6"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    Online APs
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c6"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    AP Capacity
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c4"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c5"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c6"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Client Experience should render widget with proper data 1`] = `
<DocumentFragment>
   
  .c5 {
  width: 20px;
  height: 20px;
  margin-right: -8px;
}

.c3 {
  width: 16px;
  height: 16px;
}

.c3 path {
  stroke: var(--acx-neutrals-50);
}

.c3 circle {
  fill: var(--acx-neutrals-50);
}

.c4 {
  border: none;
  padding: 0;
}

.c4.c4.c4.c4.ant-btn-icon-only {
  width: 16px;
  height: 16px;
  min-width: unset;
}

.c1 {
  height: 100%;
  width: 100%;
}

.c1 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c1 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c1 .ant-card-head-title {
  padding: 0;
}

.c1 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c1 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 .ant-card-extra {
  padding: 0;
}

.c1 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c8 .ant-progress-steps-outer .ant-progress-steps-item {
  width: 6px !important;
  border-radius: 2px;
}

.c8 .ant-progress-inner,
.c8 .ant-progress-bg {
  border-radius: 0px 3px 3px 0px !important;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="c2"
                  >
                    Client Experience
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="c3"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only c4"
                    title="Expand"
                    type="button"
                  >
                    <svg
                      class="c5"
                      data-testid="ArrowChevronRight"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: flex; height: 800px; width: 1280px; flex-direction: column; justify-content: space-around;"
            >
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    Connection Success
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c8"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 73.88428515495194%; height: 10px; background: rgb(35, 171, 54);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    Time To Connect
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c8"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 73.62284333197731%; height: 10px; background: rgb(35, 171, 54);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    Client Throughput
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c8"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 79.54545454545455%; height: 10px; background: rgb(35, 171, 54);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    Online APs
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c8"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 67.05309396485866%; height: 10px; background: rgb(35, 171, 54);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row "
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    AP Capacity
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 c6"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="c7"
                  >
                    <div
                      class="ant-progress-wrapper"
                    >
                      <div
                        class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default c8"
                        gradientmode="completion"
                      >
                        <div
                          class="ant-progress-outer"
                        >
                          <div
                            class="ant-progress-inner"
                            style="background-color: rgb(212, 212, 212);"
                          >
                            <div
                              class="ant-progress-bg"
                              style="width: 52.083333333333336%; height: 10px; background: rgb(249, 195, 75);"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
